2004-11-22  Shawn Betts  <katia_dilkina@verizon.net>

	* nhlaunch.c (games): make nethack the first entry.

	* nethack-nhlaunch.el (nh-network-game): new defvar
	(nh-network-filter): send the game to play
	(nethack-connect-to-server): take another arg, game.

	* nhlaunch.c (read_cmd): new command, list
	(struct game_t): new struct
	(games): new global
	(NETHACK_PROGRAM): remove
	(find_program): new function
	(list_programs): likewise
	(read_cmd): play takes an argument and uses find_program to
	determine which program to execlp.
	(read_cmd): remove debugging output

2004-11-19  Shawn Betts  <katia_dilkina@verizon.net>

	* nethack-nhlaunch.el (nethack-connect-to-server): make autoload
	require nethack.

	* nethack.el (nethack): make autoload

2004-11-19  Shawn Betts  <sabetts@vcn.bc.ca>

	* nethack.el (nethack-add-menu-hook): new hook

	* nethack-example.el (nethack-x-highlights): new defvar
	(nethack-x-highlight-option): new function

	* nethack-cmd.el (technique): new nethack command

	* nethack-api.el (nhapi-add-menu): run the nethack-add-menu-hook.

2004-11-16  Shawn Betts  <sabetts@vcn.bc.ca>

	* mkpatch: src, ref, and work are pulled from args 1, 2, and 3.

	* Makefile: Add rules for building slashem patches

	* nethack.el (nethack): call nethack-start with the process as an
	arg.
	(nethack-connect-to-server): remove
	(nethack-is-running): new function
	(nethack-start): new function
	(nethack-create-process): remove function

	* nethack-keys.el (nh-map-mode-map): add keybinding for travel command

	* nethack-cmd.el (travel): new nethack command

2004-11-14  Shawn Betts  <sabetts@vcn.bc.ca>

	* nethack.el (nethack): call nethack-create-process
	(nethack-connect-to-server): new function
	(nethack-create-process): new function
	(nh-send-and-wait): check if nh-proc's status is 'open or 'run

	* nethack-cmd.el (options): new command

	* nethack-api.el (nh-options-cbreak): new defvar
	(nh-options-dec-graphics): likewise
	(nh-options-echo): likewise